--- a/public/stylesheets/fleet.css
+++ b/public/stylesheets/fleet.css
@@ -137,11 +137,11 @@
 
 
 /*船舶范围搜索条*/
-#ShipSearch_DWTRange{width:380px;height:40px;top:70px;left:-364px;display:block;border-top-left-radius:0px;border-bottom-left-radius:0px;}
-.Search_Info{margin-left:10px;height:40px;line-height:40px;font-size:13px;color:#fff;position:relative;background: rgba(6, 2, 5, 0.8);}
-.Search_Info>.Search_typeText{display:inline-block;height:24px;line-height:24px;width:50px;padding-left:5px;cursor:pointer;border:1px solid #fff;border-radius:5px;}
-.Search_Info>.Search_typeSelect{width:55px;height:60px;background: rgba(6, 2, 5, 0.8);border:1px solid #323232;border-radius:5px;;position:absolute;top:33px;left:33px;display:none;}
-.Search_typeSelect>li{height:20px;line-height:20px;padding-left:5px;color:white;cursor:pointer;}
+#ShipSearch_DWTRange{width:470px;height:40px;top:70px;left:0px;display:block;border-top-left-radius:0px;border-bottom-left-radius:0px;}
+.Search_Info{margin-left:10px;height:40px;line-height:40px;font-size:13px;color:#fff;position:relative;}
+.Search_Info>.Search_typeText{display:inline-block;height:24px;line-height:24px;width:140px;padding-left:5px;cursor:pointer;border:1px solid #fff;border-radius:5px;}
+.Search_Info>.Search_typeSelect{width:142px;height:200px;background: rgba(6, 2, 5, 0.8);border:1px solid #323232;border-radius:5px;;position:absolute;top:33px;left:33px;display:none;overflow-y:scroll;overflow-x:hidden;}
+.Search_typeSelect>li{width:120px;height:20px;line-height:20px;padding-left:5px;color:white;cursor:pointer;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .Search_typeSelect>li:hover{background:#217BA2;}
 .Search_Info>input{width:50px;height:20px;line-height:20px;background:transparent;border:1px solid #fff;color:#fff;font-size:12px;border-radius:5px;padding-left:5px;outline:none;}
 .Search_Info>input:focus{box-shadow:0px 0px 1px 1px #fff;}
