--- a/public/stylesheets/fleet.css
+++ b/public/stylesheets/fleet.css
@@ -82,20 +82,22 @@
 
 
 /*船舶详情页面*/
-#shipDetails{width:385px;height:366px;top:10px;left:400px;display:none;}
+#shipDetails{width:385px;height:396px;top:10px;left:400px;display:none;}
 .shipName{font-size:14px;color:#fff;padding-top:3px;}
-.shipInfo_show{width:96%;height:130px;margin:5px auto;}
-.shipInfo_show>.shipInfo_List{width:250px;height:100px;float:right;}
+.shipInfo_show{width:96%;height:160px;margin:5px auto;}
+.shipInfo_show>.shipInfo_List{width:250px;height:160px;float:right;}
 .shipInfo_List>li{height:16px;line-height:16px;float:left;color:#fff;font-size:12px;margin-right:5px;}
 .shipInfo_List>li:nth-child(even){width:52%;}
 .shipInfo_List>li:nth-child(odd){width:44%;}
 .shipInfo_List>li:nth-child(1){width:100%;}
 .shipInfo_List>li:nth-child(10){width:100%;}
 .shipInfo_List>li:nth-child(11){width:100%;}
-.shipInfo_List>li:last-child{width:100%;}
+.shipInfo_List>li:nth-child(12){width:100%;}
+.shipInfo_List>li:nth-child(13){width:100%;}
+.shipInfo_List>li:nth-child(14){width:100%;}
 .shipInfo_List>li>img{width:16px;height:11px;background:#ccc;position:relative;top:2px;}
 /*轮播图*/
-.shipInfo_show>.shipInfo_img{float:left;width:80px;height:80px;position:relative;top:25px;left:20px;}
+.shipInfo_show>.shipInfo_img{float:left;width:80px;height:80px;position:relative;top:40px;left:20px;}
 .shipInfo_imgShow{width:80px;height:60px;overflow:hidden;border-radius:1px;}
 /*.shipInfo_imgShow{width:80px;height:60px;background:url('http://192.168.0.66/group1/M00/00/01/wKgAQll6m1OAfTMpAAIj217DXV4158.s.jpg') center no-repeat;overflow:hidden;}*/
 .shipInfo_imgShow>ul{width:800px;position:relative;}
@@ -137,7 +139,7 @@
 
 
 /*船舶范围搜索条*/
-#ShipSearch_DWTRange{width:470px;height:40px;top:70px;left:0px;display:block;border-top-left-radius:0px;border-bottom-left-radius:0px;}
+#ShipSearch_DWTRange{width:470px;height:40px;top:70px;left:-454px;display:block;border-top-left-radius:0px;border-bottom-left-radius:0px;}
 .Search_Info{margin-left:10px;height:40px;line-height:40px;font-size:13px;color:#fff;position:relative;}
 .Search_Info>.Search_typeText{display:inline-block;height:24px;line-height:24px;width:140px;padding-left:5px;cursor:pointer;border:1px solid #fff;border-radius:5px;}
 .Search_Info>.Search_typeSelect{width:142px;height:200px;background: rgba(6, 2, 5, 0.8);border:1px solid #323232;border-radius:5px;;position:absolute;top:33px;left:33px;display:none;overflow-y:scroll;overflow-x:hidden;}
