--- a/public/stylesheets/voyageManagement.css
+++ b/public/stylesheets/voyageManagement.css
@@ -44,18 +44,38 @@
 .shipVoyageList_List>li>div{width:24px;height:24px;background:#ccc;margin:0 auto;}
 .shipVoyageList_List>li>span{display:inline-block;width:70px;text-align:center;line-height:16px;height:16px;position:relative;top:-3px;font-size:12px;color:#fff;}
 
+/*航次详情——航次信息*/
+.oneVoyageInfo{width:94%;margin:0 auto;}
+.oneVoyageInfo>ul{height:120px;}
+.oneVoyageInfo>ul>li{display:inline-block;height:20px;line-height:20px;margin-top:4px;font-size:13px;color:#fff;float:left;margin-right:15px;}
+.oneVoyageInfo>ul>li:nth-child(even){width:166px;}
+.oneVoyageInfo>ul>li:nth-child(odd){width:140px;}
+.oneVoyageInfo>ul>li:nth-child(1){width:270px;}
+.oneVoyageInfo>ul>li:nth-child(2){width:95px;}
+.oneVoyageInfo>ul>li:nth-child(3){width:130px;}
+.oneVoyageInfo>ul>li:nth-child(3)>span{display:inline-block;height:20px;line-height:20px;}
+.oneVoyageInfo>ul>li:nth-child(3)>span:nth-child(2){display:inline-block;width:80px;height:18px;line-height:18px;border-radius:5px;border:1px solid #fff;padding-left:5px;cursor:pointer;}
+.oneVoyageInfo>ul>li:nth-child(4){width:100px;}
+.oneVoyageInfo>ul>li:nth-child(4)>input{width:45px;padding-left:4px;height:18px;color:#fff;position:relative;top:-1px;background:transparent;border-radius:5px;border:1px solid #fff;outline:none;}
+.oneVoyageInfo>ul>li:nth-child(5),.oneVoyageInfo>ul>li:nth-child(6){width:320px;position:relative;}
+.oneVoyageInfo>ul>li:nth-child(6){margin-right:0px;}
+.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:12px;background:transparent;border-radius:5px;border:1px solid #fff;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.oneVoyageInfo>ul>li:nth-child(5)>span,.oneVoyageInfo>ul>li:nth-child(6)>span{margin-left:38px;}
+.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;background:#f08a24;position:absolute;margin-left:5px;}
+.oneVoyageInfo>ul>li:nth-child(10),.oneVoyageInfo>ul>li:nth-child(14),.oneVoyageInfo>ul>li:nth-child(18){margin-right:0px;}
 
+/*航次详情——停靠信息*/
+.oneVoyage_DockedInfo{width:100%;background:#ccc;height:160px;margin-top:5px;}
+.oneVoyage_DockedInfo>ul:first-child{background:#000;}
+.oneVoyage_DockedInfo>ul>li{width:100%;height:24px;line-height:24px;position:relative;}
+.oneVoyage_DockedInfo>ul>li>span{display:inline-block;text-align:center;font-size:13px;color:#fff;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(1){width:60px;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(2){width:260px;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(3){width:100px;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(4){width:80px;}
 
-
-
-
-
-
-
-
-
-
-
+.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:#00B7FF;border-radius:5px;position: absolute;top:2px;}
+.oneVoyage_DockedList>li:hover{background:#217BA2;cursor:pointer;}
 
 
 
