--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -254,9 +254,11 @@
             <li>吃水: 10.419 m</li>
             <li>状态: 正服役</li>
             <li>DWT: 266307 mt</li>
-            <li>类型: 货船</li>
+            <li>类型: Liquefied Gas Carrier (LPG)</li>
             <li>船籍港: Bander Seri Begawa</li>
             <li>长*宽*高: 172*26*14 m</li>
+            <li>source:AAAAAAAAAAAAAA</li>
+            <li>更新时间:2007-02-03</li>
         </ul>
     </div>
     <div class="dividing_line"></div>
@@ -517,7 +519,50 @@
         <div class="shipVoyageList_rightbtn"></div>
     </div>
     <div class="dividing_line"></div>
-
+    <div class="oneVoyageInfo">
+        <ul>
+            <li>船名：GIOVANNI BATTISTA DE CARLINI</li>
+            <li>IMO：1234567</li>
+            <li><span>货物：</span>
+                <span> ads</span>
+            </li>
+            <li>吨位：<input type="text" value="400000"> t</li>
+            <li>出发港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)"> <i></i><span>2007-02-03 20:00</span></li>
+            <li>到达港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)"> <i></i><span>2007-02-03 20:00</span></li>
+            <li>航行时长：20d20h20m</li>
+            <li>航速：00.00kts</li>
+            <li>航程：45678nm</li>
+            <li>停泊总时长：20d20h20m</li>
+            <li>加油时长：20d20h20m</li>
+            <li>补给时长：20d20h20m</li>
+            <li>修船时长：20d20h20m</li>
+            <li>未明时长：20d20h20m</li>
+            <li>装货时长：20d20h20m</li>
+            <li>装货等待时长：20d20h20m</li>
+            <li>卸货时长：20d20h20m</li>
+            <li>卸货等待时长：20d20h20m</li>
+        </ul>
+        <div class="oneVoyage_DockedInfo">
+            <ul>
+                <li><span>序号</span><span>起止时间</span><span>历时</span><span>状态</span></li>
+            </ul>
+            <ul class="oneVoyage_DockedList">
+                <li><span>01</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select name="" id="">
+                        <option value="1">装港</option>
+                        <option value="2">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 
