--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -548,9 +548,100 @@
             </ul>
             <ul class="oneVoyage_DockedList">
                 <li><span>01</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
-                    <select name="" id="">
+                    <select>
                         <option value="1">装港</option>
-                        <option value="2">卸港</option>
+                        <option value="2" selected="selected">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>02</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select>
+                        <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>03</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select>
+                        <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>04</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select>
+                        <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>05</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select>
+                        <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>06</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select>
+                        <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>07</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select>
+                        <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>08</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                    <select>
+                        <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
                         <option value="5">补给</option>
@@ -562,6 +653,12 @@
                 </span><div class="oneVoyage_EndBtn">航次结束</div></li>
             </ul>
         </div>
+    </div>
+    <div class="dividing_line"></div>
+    <div class="voyageDetails_btnList">
+        <div class="voyageDetails_btn voyageBtn_StandardRoute">标准航线</div>
+        <div class="voyageDetails_btn voyageBtn_StandardGoods">标准货物</div>
+        <div class="voyageDetails_btn voyageBtn_SaveOrConfirm">保存</div>
     </div>
 </div>
 
