删除之前没用样式

--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -76,7 +76,7 @@
 
 <div id="route_Show">
     <div class="route_Fleet_btn"></div>
-    <div class="route_Ship_btn"></div>
+    <!--<div class="route_Ship_btn"></div>-->
     <div class="route_Info_btn"></div>
     <div class="route_Voyage_btn"></div>
 
@@ -251,7 +251,7 @@
             <li>MMSI: 441916000</li>
             <li>船旗: <img src=""> KOR</li>
             <li>建造年代: 1992-08-27</li>
-            <li>吃水: 10.419 m</li>
+            <li>吃水: 10.4r19 m</li>
             <li>状态: 正服役</li>
             <li>DWT: 266307 mt</li>
             <li>类型: Liquefied Gas Carrier (LPG)</li>
