--- a/public/stylesheets/voyageManagement.css
+++ b/public/stylesheets/voyageManagement.css
@@ -3,9 +3,11 @@
 #route_Show>.route_Voyage_btn:hover{background-position:-24px 4px;}
 #route_Show>.route_Voyage_btn:active{background-position:-52px 4px;}
 
-#voyageList,#voyageDetails{position:fixed;z-index:100;display:none;border-radius:10px;background:rgba(6,2,5,0.8);}
+
+#voyageList,#voyageDetails,#voyage_StandardRoute{position:fixed;z-index:100;display:none;border-radius:10px;background:rgba(6,2,5,0.8);}
 #voyageList{width:650px;height:350px;top:50px;left:300px;display:none;}
 #voyageDetails{width:700px;height:440px;top:70px;left:300px;display:none;}
+#voyage_StandardRoute{width:780px;height:185px;top:70px;left:300px;display:none;}
 
 /*航次列表分类选项*/
 .voyageList_select{width:90%;height:40px;margin:0 auto;}
@@ -59,13 +61,13 @@
 .oneVoyageInfo>ul>li:nth-child(4)>input{width:45px;padding-left:4px;height:18px;color:#fff;position:relative;top:-1px;background:transparent;border-radius:5px;border:1px solid #fff;outline:none;}
 .oneVoyageInfo>ul>li:nth-child(5),.oneVoyageInfo>ul>li:nth-child(6){width:320px;position:relative;}
 .oneVoyageInfo>ul>li:nth-child(6){margin-right:0px;}
-.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:12px;background:transparent;border-radius:5px;border:1px solid #fff;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:12px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
 .oneVoyageInfo>ul>li:nth-child(5)>span,.oneVoyageInfo>ul>li:nth-child(6)>span{margin-left:38px;}
-.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;background:#f08a24;position:absolute;margin-left:5px;}
+.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;background:#f08a24;position:absolute;margin-left:5px;cursor:pointer;}
 .oneVoyageInfo>ul>li:nth-child(10),.oneVoyageInfo>ul>li:nth-child(14),.oneVoyageInfo>ul>li:nth-child(18){margin-right:0px;}
 
 /*航次详情——停靠信息*/
-.oneVoyage_DockedInfo{width:100%;background:#ccc;height:168px;margin:5px auto;}
+.oneVoyage_DockedInfo{width:100%;height:168px;margin:5px auto;}
 .oneVoyage_DockedInfo>ul:first-child{background:#000;}
 .oneVoyage_DockedInfo>ul>li{width:100%;height:24px;line-height:24px;position:relative;}
 .oneVoyage_DockedInfo>ul>li>span{display:inline-block;text-align:center;font-size:13px;color:#fff;}
@@ -81,5 +83,5 @@
 .voyageDetails_btn{display:inline-block;width:100px;height:30px;line-height:30px;text-align:center;background:#ccc;border-radius:5px;margin-left:100px;margin-top:8px;cursor:pointer;}
 
 
-
+/*航次——标准航线*/
 
